	when an unregistered client should expire.

2003-06-27  Kevin L Mitchell  <klmitch@mit.edu>

	* ircd/s_user.c (register_user): stomp on a warning

2003-06-22 hikari <shadow@undernet.org>
	* ircd/ircd.c: Fixed check_pings() - shouldn't be any problem with
	clients not being able to connect anymore.

	* include/patchlevel.h: Bumped to pre3 - hopefuly the last pre
	before the release.

2003-06-13  Kevin L Mitchell  <klmitch@mit.edu>

	* ircd/m_settime.c: it's supposed to be %ld, not %l

2003-04-45  Reed Loden  <reed@reedloden.com>

	* INSTALL: Updated the "howto" for CVS.

	* INSTALL_FR: Updated the "howto" for CVS. (NOTE: Somebody needs
	to correct the part about the password as there isn't a password
	right now... I don't know French so I couldn't correct that.)

	* doc/Authors: Corrected my e-mail address and added several
	others. :)

	* doc/readme.cvs: Updated the "howto" for CVS.

	* tools/README: Updated location of file and partly rewrote to
	fit u2.10.11's Features.



2003-05-01  Reed Loden  <reed@reedloden.com>
	* ircd/s_err.c: Added network to text and edited 001 a bit.

	* ircd/s_user.c: Send network with 001.

2003-05-01 splidge <splidge@quakenet.org>
        * ircd/match.c: Added a check to detect the end of the string.

2003-05-02 Isomer <isomer@undernet.org>
	* ircd/IPcheck.c: Added assert()'s to check for underflow

2003-05-01 hikari <shadow@undernet.org>
	* ircd/s_conf.c: Added check to ensure the first character of a k:
	line was a digit.

	* ircd/ircd.c: Only reset the ping check on registered clients.
	Unregistered clients will now ping out if they don't register
	within FEAT_CONNECTTIMEOUT.

2003-04-28 Jeekay <jeekay@netgamers.org>
	* ircd/s_user.c: Store finduser() return value
	instead of calling twice.

2003-04-19  Perry Lorier <isomer@undernet.org>
	* configure.in: Changed == to = in "if test" line from the MacOS X
	compilation patch.

2003-04-24 Jeekay <jeekay@netgamers.org>