@@ -506,7 +506,9 @@ F:LOG:SYSTEM:LEVEL:CRIT
 # F:DEFAULT_LIST_PARAM
 # F:NICKNAMEHISTORYLENGTH:800
 # F:HOST_HIDING:TRUE
+# F:OPERHOST_HIDING:TRUE
 # F:HIDDEN_HOST:users.undernet.org
+# F:HIDDEN_OPERHOST:opers.undernet.org
 # F:HIDDEN_IP:127.0.0.1
 # F:CONNEXIT_NOTICES:FALSE
 # F:KILLCHASETIMELIMIT:30
@@ -540,6 +542,7 @@ F:LOG:SYSTEM:LEVEL:CRIT
 # F:UNLIMIT_OPER_QUERY:FALSE
 # F:LOCAL_KILL_ONLY:FALSE
 # F:CONFIG_OPERCMDS:FALSE
+# F:LOCAL_CHANNELS:TRUE
 # F:OPER_KILL:TRUE
 # F:OPER_REHASH:TRUE
 # F:OPER_RESTART:TRUE
