@@ -455,8 +455,10 @@ Q:\#coder-com:"What the hell do you think you are doing?!"
 #F:RANDOM_SEED:<you should set one explicitly>
 #F:DEFAULT_LIST_PARAM
 #F:NICKNAMEHISTORYLENGTH:800
-#F:HOST_HIDING:FALSE
+#F:HOST_HIDING:TRUE
+#F:OPERHOST_HIDING:TRUE
 #F:HIDDEN_HOST:users.undernet.org
+#F:HIDDEN_OPERHOST:opers.undernet.org
 #F:HIDDEN_IP:127.0.0.1
 #F:AUTOHIDE:TRUE
 #F:CONNEXIT_NOTICES:FALSE
@@ -491,6 +493,7 @@ Q:\#coder-com:"What the hell do you think you are doing?!"
 #F:UNLIMIT_OPER_QUERY:FALSE
 #F:LOCAL_KILL_ONLY:FALSE
 #F:CONFIG_OPERCMDS:FALSE
+#F:LOCAL_CHANNELS:TRUE
 #F:OPER_KILL:TRUE
 #F:OPER_REHASH:TRUE
 #F:OPER_RESTART:TRUE
