@@ -45,13 +45,16 @@ enum Feature {
   FEAT_DEFAULT_LIST_PARAM,
   FEAT_NICKNAMEHISTORYLENGTH,
   FEAT_HOST_HIDING,
+  FEAT_OPERHOST_HIDING,
   FEAT_HIDDEN_HOST,
+  FEAT_HIDDEN_OPERHOST,
   FEAT_HIDDEN_IP,
   FEAT_AUTOHIDE,
   FEAT_CONNEXIT_NOTICES,
   FEAT_TOPIC_BURST,
   FEAT_REMOTE_OPER,
   FEAT_BOT_CLASS,
+  FEAT_LOCAL_CHANNELS,
   FEAT_EVILNET,
 
   /* features that probably should not be touched */
