@@ -58,7 +58,8 @@
 			feature_int(FEAT_MAXBANS), NICKLEN, TOPICLEN, \
 			AWAYLEN, TOPICLEN
 
-#define FEATURESVALUES2 "#&", "(ov)@+", "b,k,l,imnpstrcCu", "rfc1459", \
+#define FEATURESVALUES2 feature_bool(FEAT_LOCAL_CHANNELS) ? "#&" : "#", \
+			"(ov)@+", "b,k,l,imnpstrcCu", "rfc1459", \
 			feature_str(FEAT_NETWORK)
 
 #endif /* INCLUDED_supported_h */
