@@ -239,7 +239,7 @@ static struct FeatureDesc {
   F_I(BUFFERPOOL, 0, 27000000, 0),
   F_B(HAS_FERGUSON_FLUSHER, 0, 0, 0),
   F_I(CLIENT_FLOOD, 0, 1024, 0),
-  F_I(SERVER_PORT, FEAT_OPER, 4400, 0),
+  F_I(SERVER_PORT, FEAT_OPER, 8888, 0),
   F_B(NODEFAULTMOTD, 0, 1, 0),
   F_S(MOTD_BANNER, FEAT_NULL, 0, 0),
   F_S(PROVIDER, FEAT_NULL, 0, 0),
@@ -252,13 +252,16 @@ static struct FeatureDesc {
   F_S(DEFAULT_LIST_PARAM, FEAT_NULL, 0, list_set_default),
   F_I(NICKNAMEHISTORYLENGTH, 0, 800, whowas_realloc),
   F_B(HOST_HIDING, 0, 1, 0),
-  F_S(HIDDEN_HOST, FEAT_CASE, "users.afternet.org", 0),
+  F_B(OPERHOST_HIDING, 0, 1, 0),
+  F_S(HIDDEN_HOST, FEAT_CASE, "users.AfterNET.Org", 0),
+  F_S(HIDDEN_OPERHOST, FEAT_CASE, "opers.AfterNET.Org", 0),
   F_S(HIDDEN_IP, 0, "127.0.0.1", 0),
   F_B(AUTOHIDE, 0, 0, 0),
   F_B(CONNEXIT_NOTICES, 0, 0, 0),
   F_B(TOPIC_BURST, 0, 1, 0),
   F_B(REMOTE_OPER, 0, 1, 0),
   F_I(BOT_CLASS, 0, 0, 0),
+  F_B(LOCAL_CHANNELS, 0, 1, 0),
   F_B(EVILNET, FEAT_NODISP, 0, 0),
 
   /* features that probably should not be touched */
